<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/grassbg"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ori.treasurehunt.GameActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="528dp"
        app:srcCompat="@drawable/ic_detector"
        android:id="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="26dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="206dp"
        android:layout_height="112dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:layout_marginBottom="50dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">

        <TextView
        android:text="@string/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/speed"
        android:textSize="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.55"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:text="@string/speed_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speedunit"
            app:layout_constraintTop_toBottomOf="@+id/speed"
            app:layout_constraintLeft_toRightOf="@+id/speed" />

        <TextView
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time"
            android:textSize="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" />

        <TextView
            android:text="@string/time_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeunit"
            app:layout_constraintLeft_toRightOf="@+id/time"
            app:layout_constraintTop_toBottomOf="@+id/time" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="209dp"
        tools:layout_editor_absoluteX="262dp"
        android:id="@+id/button" />

</android.support.constraint.ConstraintLayout>
